fix(xref): fix random xref map build concurrency error on startup